--- a/pom.xml
+++ b/pom.xml
@@ -59,12 +59,9 @@
                 <version>5.0.8</version>
             </dependency>
 
-            <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
-            <dependency>
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-core</artifactId>
-                <version>2.14.1</version>
-            </dependency>
+            <dependency> <groupId>ch.qos.logback</groupId> <artifactId>logback-classic</artifactId> <version>1.1.7</version> </dependency>
+
+
             <!-- https://mvnrepository.com/artifact/com.github.sdrss/reportng -->
             <dependency>
                 <groupId>com.github.sdrss</groupId>
