--- a/src/test/resources/properties/Config.properties
+++ b/src/test/resources/properties/Config.properties
@@ -1,3 +1,3 @@
 browser=chrome
-testsiteurl=http://automationpractice.com/index.php
+testsiteurl=http://www.way2automation.com/angularjs-protractor/banking/#/login
 implicitwait=20
