--- a/pom.xml
+++ b/pom.xml
@@ -52,12 +52,7 @@
                 <scope>test</scope>
             </dependency>
 
-            <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
-            <dependency>
-                <groupId>com.aventstack</groupId>
-                <artifactId>extentreports</artifactId>
-                <version>5.0.8</version>
-            </dependency>
+
 
             <dependency> <groupId>ch.qos.logback</groupId> <artifactId>logback-classic</artifactId> <version>1.1.7</version> </dependency>
 
@@ -123,6 +118,13 @@
                 <version>3.6</version>
             </dependency>
 
+
+            <dependency>
+                <groupId>com.relevantcodes</groupId>
+                <artifactId>extentreports</artifactId>
+                <version>2.41.2</version>
+                <scope>test</scope>
+            </dependency>
 
 
         </dependencies>
