--- a/pom.xml
+++ b/pom.xml
@@ -57,12 +57,12 @@
             <dependency> <groupId>ch.qos.logback</groupId> <artifactId>logback-classic</artifactId> <version>1.1.7</version> </dependency>
 
 
-            <!-- https://mvnrepository.com/artifact/com.github.sdrss/reportng -->
+          <!--  &lt;!&ndash; https://mvnrepository.com/artifact/com.github.sdrss/reportng &ndash;&gt;
             <dependency>
                 <groupId>com.github.sdrss</groupId>
                 <artifactId>reportng</artifactId>
                 <version>2.6.2</version>
-            </dependency>
+            </dependency>-->
             <!-- https://mvnrepository.com/artifact/com.google.inject/guice -->
             <dependency>
                 <groupId>com.google.inject</groupId>
