--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
                 <version>0.5</version>
                 <scope>compile</scope>
             </dependency>
+
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
                 <artifactId>selenium-chrome-driver</artifactId>
@@ -123,6 +124,12 @@
                 <groupId>com.relevantcodes</groupId>
                 <artifactId>extentreports</artifactId>
                 <version>2.41.2</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.7.30</version>
                 <scope>test</scope>
             </dependency>
 
